# whats-the-issue

./: .env.example  .env_example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/agent/: github_client.py  llm_adapter.py  llm_factory.py  manager.py  nodes.py  prompts.py  schemas.py
app/api/: routes.py
ui/: README.md  docker-compose.mac.yml  docker-compose.yml  index.html  nginx.conf  nginx.mac.conf
